--- a/.gitignore
+++ b/.gitignore
@@ -102,7 +102,6 @@ dist
 
 # vuepress v2.x temp and cache directory
 .temp
-.cache
 
 # Docusaurus cache and generated files
 .docusaurus
@@ -128,3 +127,15 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+# IDE files
+.idea/
+
+# Hardhat
+artifacts/
+coverage/
+cache/
+typechain-types/
+.openzeppelin
+
+package-lock.json
